add nav-control styles

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                     <img class="lazy center-block img-responsive" src="http://dummyimage.com/360x360/000/fff&text=dummy-image" alt="@todo">
                                 </div>
                             </div>
-                            <div id="nav-control" class="col-xs-6 col-xs-offset-3">
+                            <div id="nav-control" class="col-xs-6 col-xs-offset-3 col-md-3">
                                 <a class="custom-carousel-control-1" href="#carousel-example-generic-1" role="button" data-slide="prev"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span><span class="sr-only">Previous</span></a>
                                 <a class="custom-carousel-control-1" href="#carousel-example-generic-1" role="button" data-slide="next"><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span><span class="sr-only">Next</span></a>
                             </div>
@@ -139,7 +139,7 @@
                                     <img class="lazy center-block img-responsive" src="http://dummyimage.com/360x360/000/fff&text=dummy-image" alt="@todo">
                                 </div>
                             </div>
-                            <div id="nav-control" class="col-xs-6 col-xs-offset-3">
+                            <div id="nav-control" class="col-xs-6 col-xs-offset-3 col-md-3">
                                 <a class="custom-carousel-control-2" href="#carousel-example-generic-2" role="button" data-slide="prev"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span><span class="sr-only">Previous</span></a>
                                 <a class="custom-carousel-control-2" href="#carousel-example-generic-2" role="button" data-slide="next"><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span><span class="sr-only">Next</span></a>
                             </div>
