--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
             <div id="menu-wrapper" class="container-fluid">
                 <div id="menu-logo" class="col-xs-8 col-xs-offset-2">
                     <div class="col-xs-8 col-xs-offset-2 hidden-sm hidden-md hidden-lg">
-                        <!-- MOBILE ONLY LOGO -->
                         <span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>
                     </div>
                 </div>
@@ -44,7 +43,6 @@
                                     <li><a href="#">Rooms</a></li>
                                     <li><a href="#">Rates</a></li>
 
-                                    <!-- DESKTOP ONLY LOGO -->
                                     <li><a id="menu-middle-logo" class="hidden-sm hidden-xs" href="#">
                                         <span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>
                                     </a></li>
@@ -122,8 +120,6 @@
                 </div>
 
                 <div class="col-md-6">
-
-                    <!-- DESKTOP ONLY -->
                     <div id="about-carousel-2" class="col-xs-12 hidden-sm hidden-xs">
                         <div id="carousel-example-generic-2" class="carousel slide" data-ride="carousel">
                             <div class="carousel-inner" role="listbox">
@@ -160,7 +156,7 @@
 
             <!-- Rooms -->
             <div id="rooms-wrapper" class="container-fluid">
-                <div id="room-image" class="col-xs-12">
+                <div id="room-image" class="col-xs-12 hidden-md hidden-lg">
                     <div class="col-xs-12">
                         <img class="lazy img-responsive" src="http://dummyimage.com/360x180/000/fff&text=dummy-image" alt="@todo">
                     </div>
@@ -174,78 +170,80 @@
                     </div>
                 </div>
 
-                <div id="room-title" class="col-xs-12">
-                    <div class="col-xs-10 col-xs-offset-1">
+                <div id="room-title" class="col-xs-12 col-md-12">
+                    <div class="col-xs-10 col-xs-offset-1 col-md-12">
                         <h4 class="title">The Rooms</h4>
                     </div>
                 </div>
 
                 <div id="rooms-4-way-img">
-                    <div class="row">
-                        <div class="col-xs-6">
-                            <img class="lazy img-responsive" src="http://dummyimage.com/180x180/824482/161e8a&text=dummy-image" alt="@todo">
-                            <div class="overlay">
-                                <div class="overlay-content">
-                                    <h4>3 Bedroom</h4>
+                    <div class="col-md-8">
+                        <div class="row">
+                            <div class="col-xs-6 col-md-8">
+                                <img class="lazy img-responsive" src="http://dummyimage.com/180x180/824482/161e8a&text=dummy-image" alt="@todo">
+                                <div class="overlay">
+                                    <div class="overlay-content">
+                                        <h4>3 Bedroom</h4>
 
-                                    <div class="col-xs-12 top">
-                                        <span class="glyphicon glyph-small glyphicon-heart-empty" aria-hidden="true"></span>
-                                        <p>3 Doubles</p>
+                                        <div class="col-xs-12 top">
+                                            <span class="glyphicon glyph-small glyphicon-heart-empty" aria-hidden="true"></span>
+                                            <p>3 Doubles</p>
+                                        </div>
+                                        <div class="col-xs-12 bottom">
+                                            <span class="glyphicon glyph-small glyphicon-heart-empty" aria-hidden="true"></span>
+                                            <p>Bakery</p>
+                                        </div>
                                     </div>
-                                    <div class="col-xs-12 bottom">
-                                        <span class="glyphicon glyph-small glyphicon-heart-empty" aria-hidden="true"></span>
-                                        <p>Bakery</p>
+                                </div>
+                            </div>
+                            <div class="col-xs-6 col-md-4">
+                                <img class="lazy img-responsive" src="http://dummyimage.com/180x180/3995bf/161e8a&text=dummy-image" alt="@todo">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-6">
+                                <img class="lazy img-responsive" src="http://dummyimage.com/180x180/30cc00/161e8a&text=dummy-image" alt="@todo">
+                            </div>
+                            <div class="col-xs-6">
+                                <img class="lazy img-responsive" src="http://dummyimage.com/180x180/000/fff&text=dummy-image" alt="@todo">
+                                <div class="overlay">
+                                    <div class="overlay-content right-overlay-md">
+                                        <h4>3 Bedroom</h4>
+
+                                        <div class="col-xs-12 top">
+                                            <span class="glyphicon glyph-small glyphicon-heart-empty" aria-hidden="true"></span>
+                                            <p>3 Doubles</p>
+                                        </div>
+                                        <div class="col-xs-12 bottom">
+                                            <span class="glyphicon glyph-small glyphicon-heart-empty" aria-hidden="true"></span>
+                                            <p>Bakery</p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xs-6">
-                            <img class="lazy img-responsive" src="http://dummyimage.com/180x180/3995bf/161e8a&text=dummy-image" alt="@todo">
-                        </div>
                     </div>
-                    <div class="row">
-                        <div class="col-xs-6">
-                            <img class="lazy img-responsive" src="http://dummyimage.com/180x180/30cc00/161e8a&text=dummy-image" alt="@todo">
-                        </div>
-                        <div class="col-xs-6">
-                            <img class="lazy img-responsive" src="http://dummyimage.com/180x180/000/fff&text=dummy-image" alt="@todo">
-                            <div class="overlay">
-                                <div class="overlay-content">
-                                    <h4>3 Bedroom</h4>
-
-                                    <div class="col-xs-12 top">
-                                        <span class="glyphicon glyph-small glyphicon-heart-empty" aria-hidden="true"></span>
-                                        <p>3 Doubles</p>
-                                    </div>
-                                    <div class="col-xs-12 bottom">
-                                        <span class="glyphicon glyph-small glyphicon-heart-empty" aria-hidden="true"></span>
-                                        <p>Bakery</p>
-                                    </div>
+                    <div class="col-md-4">
+                        <div id="enquire-outer-wrapper" class="container-fluid">
+                            <div id="enquire-inner-wrapper" class="col-xs-10 col-xs-offset-1">
+                                <div id="form-header" class="col-xs-10 col-xs-offset-1">
+                                    <h4>Enquire now</h4>
                                 </div>
+
+                                <form>
+                                    <div class="form-group">
+                                        <input type="name" class="form-control" id="name" placeholder="Name">
+                                        <input type="email" class="form-control" id="email" placeholder="Email Address">
+                                        <input type="phone" class="form-control" id="phone" placeholder="Phone number">
+                                        <textarea class="form-control" placeholder="I'm interested in apartment ..." rows="3"></textarea>
+                                    </div>
+                                    <div id="enquire-submit" class="col-xs-10 col-xs-offset-1">
+                                        <button type="submit" class="btn btn-default">Submit</button>
+                                    </div>
+                                </form>
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-
-            <!-- Enquire now - MOBILE ONLY !-->
-            <div id="enquire-outer-wrapper" class="container-fluid hidden-sm hidden-md hidden-lg">
-                <div id="enquire-inner-wrapper" class="col-xs-10 col-xs-offset-1">
-                    <div id="form-header" class="col-xs-10 col-xs-offset-1">
-                        <h4>Enquire now</h4>
-                    </div>
-
-                    <form>
-                        <div class="form-group">
-                            <input type="name" class="form-control" id="name" placeholder="Name">
-                            <input type="email" class="form-control" id="email" placeholder="Email Address">
-                            <input type="phone" class="form-control" id="phone" placeholder="Phone number">
-                            <textarea class="form-control" placeholder="I'm interested in apartment ..." rows="3"></textarea>
-                        </div>
-                        <div id="enquire-submit" class="col-xs-10 col-xs-offset-1">
-                            <button type="submit" class="btn btn-default">Submit</button>
-                        </div>
-                    </form>
                 </div>
             </div>
 
