--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
             <div id="rates-wrapper" class="container-fluid">
                 <div id="rates-head" class="">
                     <h4 class="title">The Rates</h4>
-                    <div class="rates-text col-xs-8 col-xs-offset-2">
+                    <div class="rates-text col-xs-8 col-xs-offset-2 col-md-4 col-md-offset-8">
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing
                             elit, sed do eiusmod tempor incididunt ut labore et dolore
@@ -260,35 +260,46 @@
                     </div>
                 </div>
 
-                <div id="rates-table" class="col-xs-12">
+                <div id="rates-table" class="col-xs-12 col-md-10 col-md-offset-1">
                     <div class="row">
                         <div class="rates-left col-xs-6">
-                            <div class="title">
-                                Shared
-                            </div>
-                            <div class="sub-title1">
-                                Bedroom
-                            </div>
-                            <div class="sub-title2">
-                                From
-                            </div>
+                            <div class="col-md-4">
+                                <div class="title">
+                                    Shared
+                                </div>
+                                <div class="sub-title1">
+                                    Bedroom
+                                </div>
+                                <div class="sub-title2">
+                                    From
+                                </div>
 
-                            <div class="price-box">
+                                <div class="price-box hidden-sm hidden-md hidden-lg">
+                                    $300
+                                </div>
+                            </div>
+                            <div class="col-md-8 price-box hidden-xs">
                                 $300
                             </div>
                         </div>
-                        <div class="rates-right col-xs-6">
-                            <div class="title">
-                                2 Bedroom
-                            </div>
-                            <div class="sub-title1">
-                                Apartment
-                            </div>
-                            <div class="sub-title2">
-                                From
-                            </div>
 
-                            <div class="price-box">
+                        <div class="rates-right col-xs-6">
+                            <div class="col-md-4">
+                                <div class="title">
+                                    2 Bedroom
+                                </div>
+                                <div class="sub-title1">
+                                    Apartment
+                                </div>
+                                <div class="sub-title2">
+                                    From
+                                </div>
+
+                                <div class="price-box hidden-sm hidden-md hidden-lg">
+                                    $1,100
+                                </div>
+                            </div>
+                            <div class="col-md-8 price-box hidden-xs">
                                 $1,100
                             </div>
                         </div>
@@ -296,32 +307,42 @@
 
                     <div class="row">
                         <div class="rates-left col-xs-6">
-                            <div class="title">
-                                Single
-                            </div>
-                            <div class="sub-title1">
-                                Bedroom
-                            </div>
-                            <div class="sub-title2">
-                                From
-                            </div>
+                            <div class="col-md-4">
+                                <div class="title">
+                                    Single
+                                </div>
+                                <div class="sub-title1">
+                                    Bedroom
+                                </div>
+                                <div class="sub-title2">
+                                    From
+                                </div>
 
-                            <div class="price-box">
+                                <div class="price-box hidden-sm hidden-md hidden-lg">
+                                    $400
+                                </div>
+                            </div>
+                            <div class="col-md-8 price-box hidden-xs">
                                 $400
                             </div>
                         </div>
                         <div class="rates-right col-xs-6">
-                            <div class="title">
-                                3 Bedroom
-                            </div>
-                            <div class="sub-title1">
-                                Apartment
-                            </div>
-                            <div class="sub-title2">
-                                From
-                            </div>
+                            <div class="col-md-4">
+                                <div class="title">
+                                    3 Bedroom
+                                </div>
+                                <div class="sub-title1">
+                                    Apartment
+                                </div>
+                                <div class="sub-title2">
+                                    From
+                                </div>
 
-                            <div class="price-box">
+                                <div class="price-box hidden-sm hidden-md hidden-lg">
+                                    $1,500
+                                </div>
+                            </div>
+                            <div class="col-md-8 price-box hidden-xs">
                                 $1,500
                             </div>
                         </div>
@@ -329,32 +350,42 @@
 
                     <div class="row">
                         <div class="rates-left col-xs-6">
-                            <div class="title">
-                               Double
-                            </div>
-                            <div class="sub-title1">
-                                Bedroom
-                            </div>
-                            <div class="sub-title2">
-                                From
-                            </div>
+                            <div class="col-md-4">
+                                <div class="title">
+                                    Double
+                                </div>
+                                <div class="sub-title1">
+                                    Bedroom
+                                </div>
+                                <div class="sub-title2">
+                                    From
+                                </div>
 
-                            <div class="price-box">
+                                <div class="price-box hidden-sm hidden-md hidden-lg">
+                                    $400
+                                </div>
+                            </div>
+                            <div class="col-md-8 price-box hidden-xs">
                                 $400
                             </div>
                         </div>
                         <div class="rates-right col-xs-6">
-                            <div class="title">
-                                3 Bedroom
-                            </div>
-                            <div class="sub-title1">
-                                Apartment
-                            </div>
-                            <div class="sub-title2">
-                                From
-                            </div>
+                            <div class="col-md-4">
+                                <div class="title">
+                                    3 Bedroom
+                                </div>
+                                <div class="sub-title1">
+                                    Apartment
+                                </div>
+                                <div class="sub-title2">
+                                    From
+                                </div>
 
-                            <div class="price-box">
+                                <div class="price-box hidden-sm hidden-md hidden-lg">
+                                    $1,500
+                                </div>
+                            </div>
+                            <div class="col-md-8 price-box hidden-xs">
                                 $1,500
                             </div>
                         </div>
