add TODO + text for 'md-only' section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     </div>
                 </div>
 
-                <div id="menu" class="col-xs-10 col-xs-offset-1 
+                <div id="menu" class="col-xs-10 col-xs-offset-1
                                       col-md-7 col-md-offset-3">
                     <nav class="navbar navbar-default">
                         <div class="container-fluid">
@@ -67,7 +67,7 @@
                             Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
                             tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At
                             vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
-                            no sea takimata sanctus est Lorem ipsum dolor sit amet.  
+                            no sea takimata sanctus est Lorem ipsum dolor sit amet.
                         </p>
                     </div>
                 </div>
@@ -387,6 +387,65 @@
                             </div>
                             <div class="col-md-8 price-box hidden-xs">
                                 $1,500
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="rates-info-md" class="col-md-12 hidden-sm hidden-xs">
+                    <div class="row">
+                        <div id="rates-info-title">
+                            <span class="glyphicon glyph-facility glyphicon-heart-empty" aria-hidden="true"></span>
+                            <h4>Additional Information</h4>
+                        </div>
+                    </div>
+                    <div class="row row-lower">
+                        <div class="col-md-6">
+                            <div class="row">
+                                <h5>Occupancy period</h5>
+                                <ul>
+                                    <li>2nd September 2013 - 6th June 2014</li>
+                                </ul>
+                            </div>
+                            <div class="row">
+                                <h5>Additional Costs</h5>
+                                <ul>
+                                    <li>Booking/Security Deposit $250.00 payable immediately</li>
+                                    <li>Utilities $450.00 payable with 1rst installment</li>
+                                    <li>Parking* (Optional) payable with 1rst installment</li>
+                                </ul>
+                            </div>
+                            <div class="row">
+                                <h5>Payment Scheme</h5>
+                                <ul>
+                                    <li>1rst payment due by 23/08/2013</li>
+                                    <li>2nd payment due by 09/12/2013</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="row">
+                                <h5>Extras Available</h5>
+                                <ul>
+                                    <li>
+                                        There is ample secure gated car park spaces at an
+                                        additional cost of $200.00 for the college year
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="row">
+                                <h5>Please Note</h5>
+                                <p>
+                                    Cancellation charge $150.00 before 27th of August, after this
+                                    date full deposit will be lost.
+                                </p>
+
+                                <p>
+                                    The Booking deposit of %250.00 is held as a security deposit
+                                    and will be refunded sibject to apartment inspection at the end
+                                    of the accomodation contract. Deposit refund cheques will be mailed
+                                    within six weeks of occupancy closing date together with any refund
+                                    de from utilities deposit.
+                                </p>
                             </div>
                         </div>
                     </div>
