add style for additional information section

--- a/index.html
+++ b/index.html
@@ -393,9 +393,9 @@
                 </div>
                 <div id="rates-info-md" class="col-md-12 hidden-sm hidden-xs">
                     <div class="row">
-                        <div id="rates-info-title">
+                        <div id="rates-info-title" class="col-md-3">
                             <span class="glyphicon glyph-facility glyphicon-heart-empty" aria-hidden="true"></span>
-                            <h4>Additional Information</h4>
+                            <h5>Additional Information</h5>
                         </div>
                     </div>
                     <div class="row row-lower">
@@ -422,7 +422,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-4">
                             <div class="row">
                                 <h5>Extras Available</h5>
                                 <ul>
