--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
                                 </p>
 
                                 <p>
-                                    The Booking deposit of %250.00 is held as a security deposit
+                                    The Booking deposit of $250.00 is held as a security deposit
                                     and will be refunded sibject to apartment inspection at the end
                                     of the accomodation contract. Deposit refund cheques will be mailed
                                     within six weeks of occupancy closing date together with any refund
@@ -455,12 +455,76 @@
             <!-- Facilities -->
             <div id="facilities-wrapper" class="container-fluid">
                 <div id="facilities-title">
-                    <div class="col-xs-10 col-xs-offset-1">
+                    <div class="col-xs-10 col-xs-offset-1 col-md-12">
                         <h4 class="title">The Facilities</h4>
                     </div>
                 </div>
 
-                <div id="major-icons" class="col-xs-12">
+                <div id="desktop-icons" class="col-md-12 hidden-sm hidden-xs">
+                    <div class="row">
+                        <div class="col-md-4 col-md-4-dark">
+                            <div class="row">
+                                <span class="glyphicon glyph-facility glyphicon-heart-empty" aria-hidden="true"></span>
+                                <h5>Free Wifi</h5>
+                            </div>
+                            <div class="row">
+                                <span class="glyphicon glyph-facility glyphicon-heart-empty" aria-hidden="true"></span>
+                                <h5>Fully Furnished</h5>
+                            </div>
+                            <div class="row">
+                                <span class="glyphicon glyph-facility glyphicon-heart-empty" aria-hidden="true"></span>
+                                <h5>Central Heating</h5>
+                            </div>
+                        </div>
+                        <div class="col-md-8">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <span class="glyphicon glyph-facility glyphicon-heart-empty" aria-hidden="true"></span>
+                                    <h5>Central Heating</h5>
+                                </div>
+                                <div class="col-md-4">
+                                    <span class="glyphicon glyph-facility glyphicon-heart-empty" aria-hidden="true"></span>
+                                    <h5>Central Heating</h5>
+                                </div>
+                                <div class="col-md-4">
+                                    <span class="glyphicon glyph-facility glyphicon-heart-empty" aria-hidden="true"></span>
+                                    <h5>Central Heating</h5>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <span class="glyphicon glyph-facility glyphicon-heart-empty" aria-hidden="true"></span>
+                                    <h5>Central Heating</h5>
+                                </div>
+                                <div class="col-md-4">
+                                    <span class="glyphicon glyph-facility glyphicon-heart-empty" aria-hidden="true"></span>
+                                    <h5>Central Heating</h5>
+                                </div>
+                                <div class="col-md-4">
+                                    <span class="glyphicon glyph-facility glyphicon-heart-empty" aria-hidden="true"></span>
+                                    <h5>Central Heating</h5>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <span class="glyphicon glyph-facility glyphicon-heart-empty" aria-hidden="true"></span>
+                                    <h5>Central Heating</h5>
+                                </div>
+                                <div class="col-md-4">
+                                    <span class="glyphicon glyph-facility glyphicon-heart-empty" aria-hidden="true"></span>
+                                    <h5>Central Heating</h5>
+                                </div>
+                                <div class="col-md-4">
+                                    <span class="glyphicon glyph-facility glyphicon-heart-empty" aria-hidden="true"></span>
+                                    <h5>Central Heating</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div id="major-icons" class="col-xs-12 hidden-sm hidden-md hidden-lg">
                     <div class="row">
                         <div class="col-xs-6">
                             <span class="glyphicon glyph-facility glyphicon-heart-empty" aria-hidden="true"></span>
@@ -493,7 +557,7 @@
                     </div>
                 </div>
 
-                <div id="minor-icons" class="col-xs-12">
+                <div id="minor-icons" class="col-xs-12 hidden-sm hidden-md hidden-lg">
                     <div class="row">
                         <div class="col-xs-6">
                             <span class="glyphicon glyph-facility glyphicon-heart-empty" aria-hidden="true"></span>
